Restored portrait as content placeholder, fixed layout of home-content to not wrap on mobile widths

--- a/assets/css/_home.css
+++ b/assets/css/_home.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   display:flex;
+  /* flex-wrap: wrap; */
   align-items: center;
   padding: 0 10%;
   justify-content: space-between;
@@ -12,19 +13,37 @@
 
 .home-content {
   max-width: 45%;
-  min-width: 200px;
+  min-width: 40rem!important;
+  flex-wrap: wrap;
+}
 
+.home-content .social-buttons {
+  max-width: 250px;
+}
+
+.text-wrapper {
+  /* min-width: 70rem; */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  white-space: nowrap;
+  background: transparent;
 }
 
 .home-content .typewriter {
   color: var(--secondary);
   text-shadow: 0 0 9px var(--secondary);
+  overflow-wrap: break-word!important;
+  word-wrap: break-word!important;
+  white-space: nowrap!important;
 }
 
 .home-content h1 {
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.2;
+  overflow-wrap: break-word!important;
+  word-wrap: break-word!important;
+  white-space: nowrap!important;
 }
 
 .home-content h3 {
@@ -45,6 +64,8 @@
 
 .social-buttons {
   margin: 5%;
+  max-width:
+  100px;
 }
 
 .missing-button-spacer {
